--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,13 +1,14 @@
-@import './constants/colors'; 
-@import './constants/typography';
-@import './constants/breakpoints';
+// @import './constants/colors'; 
+// @import './constants/typography';
+// @import './constants/breakpoints';
 
-@import './base/fonts';
-@import './base/nomalize';
-@import './base/reset';
+// @import './base/fonts';
+// @import './base/nomalize';
+// @import './base/reset';
 
 @import './mixins/text-style';
 @import './mixins/responsive';
 @import './mixins/positions';
+@import './mixins/flexbox';
 
-@import './layouts/girds';
+// @import './layouts/girds';
