--- a/style.css
+++ b/style.css
@@ -440,6 +440,24 @@ ol {
   color: #FFFFFF;
   background-color: #22C58B; }
 
+.avatar-24, .avatar-32 {
+  display: block;
+  overflow: hidden;
+  border-radius: 50%; }
+  .avatar-24 img, .avatar-32 img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
+.avatar-24 {
+  width: 24px;
+  height: 24px; }
+
+.avatar-32 {
+  width: 32px;
+  height: 32px; }
+
 /* 
  * mobile (<768px) -------------------------
  * fixture------------------sm
