--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,5 +16,7 @@
 @import './modules/star-ratings';
 @import './modules/prices';
 @import './modules/buttons';
+@import './modules/forms';
+
 
 @import './layouts/girds';
