--- a/style.css
+++ b/style.css
@@ -6,67 +6,6 @@
   font-style: normal;
   font-display: block; }
 
-i {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'tomorrow' !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
-
-.ic-bell:before {
-  content: "\e900"; }
-
-.ic-bookmark:before {
-  content: "\e901"; }
-
-.ic-bookmark-filled:before {
-  content: "\e902"; }
-
-.ic-caret:before {
-  content: "\e903"; }
-
-.ic-cart:before {
-  content: "\e904"; }
-
-.ic-check:before {
-  content: "\e905"; }
-
-.ic-chevron:before {
-  content: "\e906"; }
-
-.ic-close:before {
-  content: "\e907"; }
-
-.ic-community:before {
-  content: "\e908"; }
-
-.ic-expert:before {
-  content: "\e909"; }
-
-.ic-lock:before {
-  content: "\e90a"; }
-
-.ic-menu:before {
-  content: "\e90b"; }
-
-.ic-new:before {
-  content: "\e90c"; }
-
-.ic-search:before {
-  content: "\e90d"; }
-
-.ic-star:before {
-  content: "\e90e"; }
-
-.ic-store:before {
-  content: "\e90f"; }
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -416,6 +355,45 @@ ol {
   list-style: none;
   padding-left: 0; }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important; }
+
+@media screen and (min-width: 768px) {
+  .sm-only {
+    display: none !important; } }
+
+@media screen and (max-width: 767px) {
+  .md-only {
+    display: none !important; } }
+
+@media screen and (min-width: 1200px) {
+  .md-only {
+    display: none !important; } }
+
+@media screen and (max-width: 1199px) {
+  .lg-only {
+    display: none !important; } }
+
+@media screen and (max-width: 767px) {
+  .sm-hidden {
+    display: none !important; } }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .md-hidden {
+    display: none !important; } }
+
+@media screen and (min-width: 1200px) {
+  .lg-hidden {
+    display: none !important; } }
+
 .tag-red, .tag-gray, .tag-green {
   display: inline-flex;
   justify-content: center;
@@ -663,6 +641,122 @@ ol {
     left: 10px;
     font-size: 20px;
     color: #8C8D96; }
+
+.pagination .page-control, .pagination .page-item a,
+.pagination .page-item button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.01em;
+  color: #3F4150;
+  height: 26px;
+  font-weight: 700;
+  background-color: #FFFFFF;
+  border-radius: 4px; }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .pagination .page-control {
+    width: 26px;
+    border: 1px solid #E0E2E7; }
+    .pagination .page-control.page-prev {
+      margin-right: 24px; }
+      .pagination .page-control.page-prev .ic-chevron {
+        transform: rotate(90deg); }
+    .pagination .page-control.page-next {
+      margin-left: 24px; }
+      .pagination .page-control.page-next .ic-chevron {
+        transform: rotate(-90deg); }
+    .pagination .page-control:hover {
+      opacity: 0.4; }
+    .pagination .page-control .ic-chevron {
+      font-size: 20px; }
+  .pagination .page-list {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .pagination .page-item {
+    margin-right: 4px; }
+    .pagination .page-item.is-active a,
+    .pagination .page-item.is-active button {
+      color: #FFFFFF;
+      background-color: #3DA5F5; }
+      .pagination .page-item.is-active a:hover,
+      .pagination .page-item.is-active button:hover {
+        color: #FFFFFF; }
+    .pagination .page-item:last-child {
+      margin-right: 0; }
+    .pagination .page-item a,
+    .pagination .page-item button {
+      min-width: 26px;
+      padding: 0 4px; }
+      .pagination .page-item a:hover,
+      .pagination .page-item button:hover {
+        color: #3DA5F5; }
+
+i {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'tomorrow' !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.ic-bell:before {
+  content: "\e900"; }
+
+.ic-bookmark:before {
+  content: "\e901"; }
+
+.ic-bookmark-filled:before {
+  content: "\e902"; }
+
+.ic-caret:before {
+  content: "\e903"; }
+
+.ic-cart:before {
+  content: "\e904"; }
+
+.ic-check:before {
+  content: "\e905"; }
+
+.ic-chevron:before {
+  content: "\e906"; }
+
+.ic-close:before {
+  content: "\e907"; }
+
+.ic-community:before {
+  content: "\e908"; }
+
+.ic-expert:before {
+  content: "\e909"; }
+
+.ic-lock:before {
+  content: "\e90a"; }
+
+.ic-menu:before {
+  content: "\e90b"; }
+
+.ic-new:before {
+  content: "\e90c"; }
+
+.ic-search:before {
+  content: "\e90d"; }
+
+.ic-star:before {
+  content: "\e90e"; }
+
+.ic-store:before {
+  content: "\e90f"; }
 
 /* 
  * mobile (<768px) -------------------------
