--- a/styles/mixins/_flexbox.scss
+++ b/styles/mixins/_flexbox.scss
@@ -13,19 +13,19 @@ $flex-map:(
 
 @mixin flexbox($jc: center, $ai: center){
   display: flex;
-  justify-content: $jc;
-  align-items: $ai;
+  justify-content: _get-flex-value($jc);
+  align-items: _get-flex-value($ai);
 }
 
 @mixin inline-flexbox($jc: center, $ai: center){
   display: inline-flex;
-  justify-content: $jc;
-  align-items: $ai;
+  justify-content: _get-flex-value($jc);
+  align-items: _get-flex-value($ai);
 }
 
 @mixin column-flexbox($jc: center, $ai: center){
   display: flex;
   flex-direction: column;
-  justify-content: $jc;
-  align-items: $ai;
+  justify-content: _get-flex-value($jc);
+  align-items: _get-flex-value($ai);
 }
