--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,6 +21,7 @@
 @import './modules/pagination';
 @import './modules/icons';
 
+@import './components/gnb_nav';
 
 @import './layouts/girds';
 @import './layouts/gnb';
