--- a/style.css
+++ b/style.css
@@ -350,6 +350,9 @@ a,
 button {
   cursor: pointer; }
 
+button {
+  padding: 0; }
+
 ul,
 ol {
   list-style: none;
@@ -438,7 +441,7 @@ ol {
 
 .star-rating-13, .star-rating-16, .star-rating-20, .star-rating-24 {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center; }
 
 .ic-star {
@@ -462,7 +465,7 @@ ol {
 .price-20,
 .price-32, .price-off {
   display: inline-flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center; }
   .price-16 .amount, .price-20 .amount, .price-32 .amount, .price-off .amount {
     font-family: "Tahoma", sans-serif;
@@ -699,14 +702,12 @@ ol {
         color: #3DA5F5; }
 
 i {
-  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'tomorrow' !important;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -757,6 +758,38 @@ i {
 
 .ic-store:before {
   content: "\e90f"; }
+
+.gnb-nav-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center; }
+
+.gnb-nav-item {
+  margin-right: 24px; }
+  .gnb-nav-item:last-child {
+    margin-right: 0; }
+  .gnb-nav-item a {
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.02em;
+    color: #3F4150;
+    font-weight: 700; }
+
+.gnb-icon-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  font-size: 24px;
+  color: #8C8D96;
+  transition: color 200ms ease-in-out; }
+  .gnb-icon-button.is-menu {
+    color: #3DA5F5; }
+    .gnb-icon-button.is-menu:active {
+      color: #3186C4; }
+  .gnb-icon-button:active {
+    color: #3F4150; }
 
 /* 
  * mobile (<768px) -------------------------
@@ -856,5 +889,60 @@ i {
         width: 1045px; }
       .container .col-lg-12 {
         width: 1140px; } }
+
+.gnb {
+  position: relative;
+  border-bottom: 1px solid #E0E2E7; }
+  .gnb-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px; }
+  .gnb-right .button-group {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center; }
+  .gnb-right .gnb-icon-button.is-search {
+    margin-right: 4px; }
+  .gnb .logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    .gnb .logo a {
+      display: block; }
+    .gnb .logo img {
+      display: block;
+      width: auto;
+      height: 20px; }
+  @media screen and (min-width: 768px) {
+    .gnb-left {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center; }
+    .gnb-right {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center; }
+      .gnb-right .button-group {
+        margin-right: 24px; }
+        .gnb-right .button-group .gnb-icon-button {
+          margin-right: 8px; }
+    .gnb-wrapper {
+      height: 80px; }
+    .gnb .logo {
+      position: static;
+      margin-right: 32px;
+      transform: none; }
+      .gnb .logo img {
+        height: 24px; }
+    .gnb .btn-primary {
+      width: 88px; }
+      .gnb .btn-primary i {
+        margin-left: 4px; } }
+  @media screen and (min-width: 1200px) {
+    .gnb-right .input-group {
+      width: 264px;
+      margin-right: 24px; } }
 
 /*# sourceMappingURL=style.css.map */
