--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,7 +21,8 @@
 @import './modules/pagination';
 @import './modules/icons';
 
-@import './components/gnb_nav';
+@import './components/gnb-nav';
+@import './components/gnb-icon-buttons';
 
 @import './layouts/girds';
 @import './layouts/gnb';
