--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -45,6 +45,21 @@
         .gnb-icon-button{
           margin-right: 8px;
         }
+
+        .gnb-auth{
+          a{
+            @include text-style(14, $secondary);
+            font-weight: 700;
+
+            &:first-child{
+              margin-right: 12px;
+            }
+
+            &:hover{
+              color: $blue;
+            }
+          }
+        }
       }
     }
 
