--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -3,8 +3,30 @@
 
   position: relative;
 
+  &-button{
+    width: 32px;
+    height: 32px;
+    overflow: hidden;
+    border: 3px solid $white;
+    border-radius: 50%;
+    transition: border-color 200ms ease-in-out;
+
+    &:hover,
+    &.is-active{
+      border-color: $blue;
+    }
+
+    img{
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
   &-content{
     @include pos-center-x;
+    top: 52px;
     box-shadow: $dropdown-shadow;
     border-radius: 4px;
 
