--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -7,6 +7,10 @@
     width: 32px;
     height: 32px;
     overflow: hidden;
+    background-image: url(../../assets/images/img-user-default.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
     border: 3px solid $white;
     border-radius: 50%;
     transition: border-color 200ms ease-in-out;
