--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -3,6 +3,18 @@
 
   position: relative;
 
+  &.is-active{
+    .my-menu-button{
+      border-color: $blue;
+    }
+
+    .my-menu-content{
+      opacity: 1;
+      visibility: visible;
+      transform: translate3d(-50%, 0, 0);
+    }
+  }
+
   &-button{
     width: 32px;
     height: 32px;
@@ -15,8 +27,7 @@
     border-radius: 50%;
     transition: border-color 200ms ease-in-out;
 
-    &:hover,
-    &.is-active{
+    &:hover{
       border-color: $blue;
     }
 
@@ -33,6 +44,11 @@
     top: 52px;
     box-shadow: $dropdown-shadow;
     border-radius: 4px;
+    visibility: hidden;
+    opacity: 0;
+    transform: translate3d(-50%, -10px, 0);
+    transition: visibility 200ms ease-in-out, 
+    opacity 200ms ease-in-out, transform 200ms ease-in-out;
 
     &::before,
     &::after{
