replace literal values with global variables and set background color

--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -1,6 +1,7 @@
 .lnb{
   @include no-scrollbar;
   overflow-x: auto;  // 터지는부분 스크롤처리
+  background-color: $white;
   
   &-list{
     @include inline-flexbox(start);
