--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,6 +31,7 @@
 @import './components/drawer-menu';
 @import './components/search-history';
 @import './components/breadcrumb';
+@import './components/product-carousel';
 
 @import './layouts/girds';
 @import './layouts/gnb';
