--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -9,37 +9,34 @@
   &-thumbnail{
     @include pos-center-x;
     bottom: 16px;
+  }
 
-    .thumbnail{
+  .thumbnail-list{
+    @include flexbox;
+  }
 
-      &-list{
-        @include flexbox;
+  .thumbnail-item{
+    @include flexbox;
+    margin: 0 4px;
+
+    &.tns-nav-active{
+      button{
+      opacity: 1;
+      transform: scale(1.333333);
       }
+    }
 
-      &-item{
-        @include flexbox;
-        margin: 0 4px;
+    button{
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background-color: $white;
+      opacity: 0.7;
+      transition: all 100ms ease-in-out;
+    }
 
-        &.tns-nav-active{
-          button{
-            opacity: 1;
-            transform: scale(1.333333);
-          }
-        }
-
-        button{
-          width: 6px;
-          height: 6px;
-          border-radius: 50%;
-          background-color: $white;
-          opacity: 0.7;
-          transition: all 100ms ease-in-out;
-        }
-
-        img{
-          display: none;
-        }
-      }
+    img{
+      display: none;
     }
   }
   
@@ -48,4 +45,48 @@
     width: 100%;
     height: auto;
   }
+  
+  @include responsive(T){
+    padding-right: 30px;
+
+    &-slider{
+      margin: 0 0 8px 0;
+      overflow: hidden;
+      border-radius: 4px;
+    }
+
+    &-thumbnail {
+      position: static;
+      transform: none;
+    }
+
+    .thumbnail-list{
+      justify-content: flex-start;
+    }
+
+    .thumbnail-item{
+      margin: 0 8px 0 0;
+
+      &.tns-nav-active{
+        button{
+          border: 2px solid $blue;
+          transform: none;
+        }
+      }
+
+      button{
+        @include flexbox;
+        width: 56px;
+        height: 56px;
+        overflow: hidden;
+        border-radius: 4px;
+        opacity: 1;
+      }
+
+      img{
+        display: block;
+        width: 56px;
+      }
+    }
+  } 
 }
