--- a/styles/components/_product-info.scss
+++ b/styles/components/_product-info.scss
@@ -21,7 +21,8 @@
     .info-review{
       @include flexbox(start);
 
-      .star-rating-13{
+      .star-rating{
+        @include star-rating(13px);
         margin-right: 8px;
       }
 
@@ -74,6 +75,7 @@
   }
 
   &-delivery{
+    @include text-style(16, $primary);
     padding-top: 12px;
     border-top: 1px solid $border;
 
@@ -82,4 +84,72 @@
       margin-bottom: 2px;
     }
   }
+
+  @include responsive(T){
+    padding: 0;
+
+    &-header{
+      .info-brand{
+        display: inline-block;
+        margin-bottom: 8px;
+      }
+
+      .info-title{
+        @include text-style(24);
+        margin-bottom: 8px;
+      }
+
+      .info-review{
+        .star-rating{
+          font-size: 16px;
+        }
+
+        p{
+          @include inline-flexbox(start);
+        }
+      }
+    }
+
+    &-price{
+      .info-price-wrapper{
+        @include flexbox(start, end);
+        margin-bottom: 12px;
+
+      }
+
+      .discount-rate{
+        align-items: flex-end;
+        .rate{
+          font-size: 44px;
+          line-height: 36px;
+        }
+        
+        .percent{
+          line-height: 20px;
+        }
+      }
+
+      .info-sale-price{
+        margin-bottom: 0;
+        
+        .price-32{
+          margin-right: 8px;
+        }
+      }
+
+      .info-point{
+        margin-bottom: 20px;
+      }
+    }
+
+    &-delivery{
+      padding-top: 16px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid $border;
+
+      span{
+        margin-bottom: 8px;
+      }
+    }
+  }  
 }
