--- a/styles/main.scss
+++ b/styles/main.scss
@@ -35,6 +35,8 @@
 @import './components/product-carousel';
 @import './components/product-info';
 @import './components/order-form';
+@import './components/checkout-card';
+
 
 @import './layouts/girds';
 @import './layouts/gnb';
