--- a/styles/main.scss
+++ b/styles/main.scss
@@ -36,6 +36,9 @@
 @import './components/product-info';
 @import './components/order-form';
 @import './components/checkout-card';
+@import './components/product-section-header';
+
+
 
 
 @import './layouts/girds';
