--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,9 +37,7 @@
 @import './components/order-form';
 @import './components/checkout-card';
 @import './components/product-section-header';
-
-
-
+@import './components/product-table';
 
 @import './layouts/girds';
 @import './layouts/gnb';
