product-tab 모바일버전 구현

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -46,4 +46,5 @@
 @import './layouts/search-modal';
 @import './layouts/lnb';
 @import './layouts/global-header';
-@import './layouts/global-footers';
+@import './layouts/global-footers'; 
+@import './layouts/product-tab'; 
