--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -40,4 +40,26 @@
       color: $secondary;
     }
   }
+
+  @include responsive(T){
+    height: 54px;
+    background-color: $background;
+    border-bottom: none;
+
+    &-item{
+      button{
+        @include text-style(16);
+        height: 54px;
+      }
+
+      .badge{
+        margin-left: 8px;
+      }
+    }
+  }
+  @include responsive(D){
+    &-item button:hover{
+      color: $blue;        
+    }
+  }
 }
