--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -46,6 +46,9 @@
     background-color: $background;
     border-bottom: none;
 
+    &-list{
+      margin: 0
+    }
     &-item{
       button{
         @include text-style(16);
