--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -3,7 +3,7 @@
 
   position: sticky;
   top: $gnb-height-sm + $lnb-height-sm;
-  width: 100%;
+  z-index: $product-tab-level;
   height: 40px;
   background-color: $white;
   border-bottom: 1px solid $border;
