gird변수 수정. constant로 옮김

--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -1,9 +1,8 @@
 .product-carousel{
-  $gird-margin: 15px;
   position: relative;
 
   &-slider{
-    margin: 0 -#{$gird-margin};
+    margin: 0 -#{$grid-margin};
   }
 
   &-thumbnail{
