--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,6 +40,8 @@
 @import './components/product-section';
 @import './components/product-section-header';
 @import './components/product-table';
+@import './components/product-spec';
+
 
 
 @import './layouts/girds';
