--- a/styles/components/_product-spec.scss
+++ b/styles/components/_product-spec.scss
@@ -1,9 +1,46 @@
 .product-spec{
+  position: relative;
+  height: 470px;
   padding-top: 20px;
+  overflow: hidden;
+
+
+  &.is-open{
+    height: auto;
+
+    .button-wrapper{
+      display: none;
+    }
+  }
+
+  .button-wrapper{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    padding-bottom: 20px;
+    background-color: $white;
+
+    &::before{
+      position: absolute; 
+      bottom: 20px + 55px;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 64px;
+      content: '';
+      background-image: linear-gradient(to top, $white 0%, transparent 100%);
+    }
+
+    button{
+      width: 100%;
+    }
+  }
 
   .product-table{
     margin-top: 20px;
   }
+  
   figure{
     img{
       display: block;
@@ -14,7 +51,7 @@
 
   @include responsive(T){
     .product-table{
-      // margin-top: 40px;
+      margin-top: 40px;
     }
   }
 }
