--- a/styles/components/_product-spec.scss
+++ b/styles/components/_product-spec.scss
@@ -29,7 +29,7 @@
       width: 100%;
       height: 64px;
       content: '';
-      background-image: linear-gradient(to top, $white 0%, transparent 100%);
+      background-image: linear-gradient(to top, $white 0%, transparent 100%); //그라데이션
     }
 
     button{
