--- a/styles/main.scss
+++ b/styles/main.scss
@@ -41,7 +41,8 @@
 @import './components/product-section-header';
 @import './components/product-table';
 @import './components/product-spec';
-
+@import './components/review-scoreboard';
+@import './components/score-stats';
 
 
 @import './layouts/girds';
