--- a/styles/components/_inquiry-card.scss
+++ b/styles/components/_inquiry-card.scss
@@ -39,9 +39,26 @@
   &-body{
     @include text-style(13);
 
-    .question-content{
+    .inquiry-content{
       position: relative;
       padding-left: 20px;
+
+      &:first-child:not(:last-child){
+        margin-bottom: 12px;
+      } // 답변 없는 카드에 마진 미적용
+    }
+
+    .seller{
+      @include flexbox(start);
+      margin-bottom: 4px;
+
+      strong{
+        margin-right: 4px;
+      }
+
+      time{
+        @include text-style(12, $tertiary);
+      }
     }
 
     span{
@@ -72,10 +89,22 @@
     &-body{
       @include text-style(14);
 
-      .question-content{
+      .inquiry-content{
         padding-left: 24px;
+
+        &:first-child:not(:last-child){
+          margin-bottom: 16px;
+        } // 답변 없는 카드에 마진 미적용
       }
 
+      .seller{
+        margin-bottom: 8px;
+      
+        strong{
+          @include text-style(16);
+        }
+      }
+      
       span{
         @include text-style(16);
       }
