--- a/styles/modules/_forms.scss
+++ b/styles/modules/_forms.scss
@@ -46,7 +46,7 @@
 
   .form-select{
     padding-right: 40px;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis; // 텍스트 초과시 ... 처리 (1줄 표현 시 사용, 2줄이상은 line-clamp사용)
   }
 
   .ic-caret{
