--- a/styles/components/_gallery-card.scss
+++ b/styles/components/_gallery-card.scss
@@ -4,11 +4,17 @@
   border-radius: 6px;
 
   &-image{
+    position: relative;
+    width: 100%;
+    height: 0; 
+    padding-bottom: 100%; 
 
     img{
+      @include pos-center;
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%; 
+      object-fit: cover; 
     }
   }
 
@@ -45,6 +51,6 @@
   }
 
   @include responsive(T){
-    
+
   }
 }
