--- a/styles/components/_user-gallery.scss
+++ b/styles/components/_user-gallery.scss
@@ -1,20 +1,68 @@
 .user-gallery{
   margin: 0 -#{$grid-margin};
+  overflow: hidden;
 
   &-slider{
+    position: relative;
     margin-bottom: 4px;
+  }
+
+  &-controls{
+    @include pos-center;
+    @include flexbox(between);
+    width: 100%;
+    padding: 0 52px;
+
+    .control-button{
+      @include flexbox;
+      width: 40px;
+      height: 40px;
+      font-size: 28px;
+      color: $primary;
+      border-radius: 50%;
+      background-color: $white;
+      transition: all 100ms ease-in-out;
+      
+      &.is-prev{
+        i{
+          margin-left: -2px;
+          transform: rotate(90deg);
+        }
+      }
+
+      &.is-next{
+        i{
+          margin-right: -2px;
+          transform: rotate(-90deg);
+        }
+      }
+
+      &:hover{
+        color: $white;
+        background-color: $blue;
+      }
+
+      &[disabled]{
+        visibility: hidden;
+      } // disabled : 사용할 수 없을 때 적용되는 html 기본속성
+    }
   }
 
   .thumbnail-list{
     @include flexbox(start);
     padding-left: 2px;
+    overflow-x: auto;
+    
+    &::-webkit-scrollbar{
+      display: none;
+    }
   }
 
   .thumbnail-item{
     margin-right: 4px;
 
     &.tns-nav-active{
-      botton{
+      button{
         border: 3px solid $blue;
       }
     }
@@ -29,11 +77,12 @@
       height: 64px;
       overflow: hidden;
       border-radius: 4px;
-
+      
       img{
         display: block;
-        width: 100%;
-        height: 100%;
+        width:64px;
+        min-width: 64px; //4번 이미지만 사이즈 고정 안되서 임시조치함
+        height: 64px;
         object-fit: cover;
       }
     }
@@ -54,6 +103,12 @@
       button{
         width: 75px;
         height: 75px;
+
+        img{
+          width: 75px;
+          min-width: 75px; //4번 이미지만 사이즈 고정 안되서 임시조치함
+          height: 75px;
+        }
       }
     }
   }
