--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,3 +65,4 @@
 @import './layouts/global-header';
 @import './layouts/global-footers'; 
 @import './layouts/product-tab'; 
+@import './layouts/order-cta'; 
